[package]
name = "erlang_etf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
bitflags = "1.3.2"
bitter = "0.5.1"
bstr = "1.0.0-pre.2"
byteorder = "1.4.3"
bytes = "1.2.0"
cassette = "0.2.3"
libflate = "1.2.0"
num-bigint = { version = "0.4.3", default-features = false }
ordered-float = { version = "3.0.0", default-features = false }
parking_lot = "0.12.1"
thiserror = "1.0.31"
